@@ -126,7 +126,24 @@ public class SecurityConfig {
 
     configuration.setAllowedMethods(
         Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-    configuration.setAllowedHeaders(List.of("*"));
+    /*
+     * Explicit headers: browsers do not treat "*" as allowing Authorization on credentialed
+     * requests; nginx layers sometimes mirror that. Required for cross-origin admin fetches
+     * (e.g. SPA on sep.* calling API on apex) including JWT image GETs in book verify wizard.
+     */
+    configuration.setAllowedHeaders(
+        Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "Accept-Language",
+            "Origin",
+            "Cache-Control",
+            "Pragma",
+            "X-Requested-With",
+            "If-None-Match",
+            "If-Modified-Since",
+            "Range"));
     configuration.setExposedHeaders(List.of("Content-Disposition"));
     configuration.setAllowCredentials(true);
     configuration.setMaxAge(3600L);
